# Postcrossing_map_generator

./: .gitignore  ClusterMap.html  LocationMap.html  Map.html  README.md  a.txt  cluster_map.html  cluster_mapBAK.html  config.json  config.jsonBAK  contryName.json  createDB.py  createGallery.py  createMap.py  createPersonalPage.py  init.py  location_map.html  login.py  main.py  map.html  map_test.html  multiDownload.py  postcrossing.py  pyproject.toml  replaceTemplate.py  replateTemplate.py  requirements.txt  year_data.json  信息汇总_template.md
data/: received.json  received_2013.json  received_2014.json  received_2015.json  received_2023.json  received_2024.json  sent.json  sent_2013.json  sent_2014.json  sent_2015.json  sent_2023.json  sent_2024.json  sent_2025.json
gallery/: favourites.md  favourites.mdBAK  popular.md  popular.mdBAK  received.md  received.mdBAK  sent.md  title.json  信息汇总.md
output/: CountryStats.html  UserStats.json  calendar.json  country_stats.html  favourites.json  keyword_old_cn.txt  keyword_old_en.txt  mdsheet.md  month.json  popular.json  received.html  received.json  received_Mapinfo.json  registerInfo.html  register_info.html  sent.html  sent.json  sent_Mapinfo.json  sheet.html  stats.json  title.json  traveling.html  traveling.json  year.json  信息汇总.md
recap/: 2013_recap_cn.html  2014_recap_cn.html  2015_recap_cn.html  2023_recap_cn.html  2024_recap_cn.html  2025_recap_cn.html  2026_recap_cn.html  template_cn.html  template_en.html
scripts/: .cookie_config.toml.example  ai_settingsBAK.toml  ai_tool.py  common_tools.py  config.json  config.toml  config.toml.example  contryNameEmoji.json  countryName.json  createGallery.py  createMap.py  createPersonalPage.py  create_gallery.py  create_map.py  create_personal_page.py  galleryUpdateStats.json  getTravelingStats.py  init.py  login.py  mailTrack.py  mail_track.py  mapUpdateStats.json  multiDownload.py  multi_download.py  postcrossing_recap.py  (+3 more)
(+35 files in other folders)
