[project]
name = "postcrossing-map-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "emojiflags==0.1.1",
    "folium>=0.20.0",
    "imap-tools>=1.11.1",
    "jieba==0.42.1",
    "opencc>=1.1.9",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "pycountry>=24.6.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "timezonefinderl>=4.0.2",
    "toml>=0.10.2",
    "wordcloud==1.9.5",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
